# lilium-tools

./: Cargo.toml
arch/: Cargo.toml
arch/src/: main.rs
ls/: Cargo.toml
ls/src/: main.rs
minish/: Cargo.toml
minish/src/: main.rs  shell.rs
ministd/: Cargo.toml
ministd/src/: helpers.rs  lib.rs  start.rs
true-false/: Cargo.toml
true-false/src/: lib.rs
uname/: Cargo.toml
uname/src/: main.rs
